--- a/README.Rmd
+++ b/README.Rmd
@@ -50,6 +50,8 @@ This package contains several data files that I use frequently. I will try to up
 
 
 ### Miscellaneous data
+* `landarea`: state and county total, land, and water area, as well as Census 2010 SF1 population and housing, unrevised
+
 * `recessions`: for each recession, peak (first day of month), trough (first day of month), year (i.e., name), first day of peak quarter, first day of end quarter
 
 * `stcodes`: state codes - state postal abbreviation, FIPS code, Census code, state name, BEA region abbreviation, BEA region name
